in which our hero fixes left right padding on mobile view

--- a/takwimu/static/css/takwimu.scss
+++ b/takwimu/static/css/takwimu.scss
@@ -103,5 +103,10 @@ img {
       border-right: none;
     }
 
+    div.row {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+
   }
 }
